apps/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkding
  namespace: linkding
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 9090
  selector:
    app: linkding
